# colsav-edit

./: .gitignore  AGENTS.md  Cargo.toml  Format.md  LICENSE.md  Makefile  README.md  colmapplotter.py  dump_colonies.py  dump_powers.py  dump_units.py  edit.py  hex_compare.py  map.md
colonization/: __init__.py  buildings.py  header.py  map.py  powers.py  trade.py  units.py
colonization-sav/: Cargo.toml
colonization-sav/src/: bits.rs  display.rs  enums.rs  error.rs  goods.rs  lib.rs  savefile.rs
colonization-sav/src/raw/: colony.rs  header.rs  indian.rs  maps.rs  mod.rs  nation.rs  player.rs  stuff.rs  trade_route.rs  tribe.rs  unit.rs
colsav/: Cargo.toml
colsav/src/: main.rs
colsav/src/tui/: app.rs  colonies_tab.rs  header_tab.rs  map_tab.rs  mod.rs  nations_tab.rs  tabs.rs  theme.rs  trade_routes_tab.rs  tribes_tab.rs  units_tab.rs
colsav/tests/: cli.rs
docs/: gemini.md
