[workspace]
members = ["colonization-sav", "colsav"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
similar_names = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
needless_pass_by_value = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
return_self_not_must_use = "allow"
items_after_statements = "allow"
