[package]
name = "colsav"
version = "0.1.0"
edition = "2024"
description = "CLI and TUI editor for Sid Meier's Colonization (1994) SAV files"
license = "Unlicense"

[dependencies]
colonization-sav = { path = "../colonization-sav" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
